# python-developer-2026-03

./: .gitignore  Makefile  README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/templates/blog/: base.html  detail.html  index.html
data/authors/: 2cab326a-ab2f-4624-a6d7-2e1855fc5e4e.json  95304003-31c8-4aa8-9dd6-d5af7810d621.json  9c99c399-4568-4079-960b-dbd333327b32.json  c4016fc5-01cc-4447-a011-7924dcb659b6.json
data/posts/: 2f1fe9c0-bdbf-4104-bee2-3c0ec514436f.json  37b364b1-ccd7-4e14-a5a2-87ace50ed726.json  4562abc7-6e68-4c72-945d-73e781365b98.json  63dfc0e5-f3ed-4d22-a48a-5274bebc1412.json  6ec246b1-ad09-4e03-8573-21e2e779856c.json  9a6613bb-61a4-49bb-becc-cc67d3d1e789.json  a6cc3a8c-db06-4314-8a67-64687f065fe6.json  b7f7daeb-620c-441f-9be9-124f96a6175f.json  dd839012-1807-4a49-9b0c-61274f1802f5.json  f30b0c7f-e615-4917-98fe-f4f90d74fffc.json
